# Playlist-Founder

./: .env.example  README.md  pyproject.toml
accounts/: models.py  serializers.py  tokens.py  views.py
config/: settings.py
templates/email/: account_activation_email.html  password_reset_email.html
utils/: __init__.py  email_service.py  password_service.py
